--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,14 @@
     <title></title>
   </head>
   <body>
+    <link rel="stylesheet/less" type="text/css" href="%PUBLIC_URL%/color.less" />
+    <script>
+      window.less = {
+        async: true,
+        env: 'production'
+      };
+    </script>
+    <script type="text/javascript" src="%PUBLIC_URL%/js/less/2.7.2/less.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
